RESOLVED FIXED139386
Fix build warning in WebKit2/UIProcess module
https://bugs.webkit.org/show_bug.cgi?id=139386
Summary Fix build warning in WebKit2/UIProcess module
Shivakumar J M
Reported 2014-12-07 22:49:23 PST
Fix build warning in WebKit2/UIProcess module: [2806/3510] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/WebProcess/WebCoreSupport/WebDiagnosticLoggingClient.cpp.o ../../Source/WebKit2/UIProcess/WebsiteData/WebsiteDataStore.cpp:49:1: warning: unused parameter ‘configuration’ [-Wunused-parameter] WebsiteDataStore::WebsiteDataStore(Configuration configuration)
Attachments
Patch (1.33 KB, patch)
2014-12-07 22:52 PST, Shivakumar J M
no flags
Shivakumar J M
Comment 1 2014-12-07 22:52:56 PST
Created attachment 242786 [details] Patch Fix build warning by removing unused parameter name from function. might have casued by bug:https://bugs.webkit.org/show_bug.cgi?id=139312
WebKit Commit Bot
Comment 2 2014-12-08 01:15:00 PST
Comment on attachment 242786 [details] Patch Clearing flags on attachment: 242786 Committed r176935: <http://trac.webkit.org/changeset/176935>
WebKit Commit Bot
Comment 3 2014-12-08 01:15:05 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.