Fix build warning in WebKit2/UIProcess module. https://bugs.webkit.org/show_bug.cgi?id=139386

Patch by Shivakumar JM <shiva.jm@samsung.com> on 2014-12-08
Reviewed by Alexey Proskuryakov.

Fix build warning by removing unused parameter name from function

* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::WebsiteDataStore):

Canonical link: https://commits.webkit.org/157226@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176935 268f45cc-cd09-0410-ab3c-d52691b4dbfc